--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node ./src/server.js",
     "dev": "nodemon ./src/server.js",
-    "migrate":"npx knex migrate:latest"
+    "migrate": "npx knex migrate:latest"
   },
   "keywords": [],
   "author": "Pedro Lucas Andrade Braganca ",
@@ -15,7 +15,9 @@
     "bcryptjs": "^2.4.3",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
+    "jsonwebtoken": "^9.0.0",
     "knex": "^2.4.2",
+    "multer": "^1.4.5-lts.1",
     "sqlite": "^4.1.2",
     "sqlite3": "^5.1.6"
   },
